--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.FitZone"
         tools:targetApi="31">
         <activity
-            android:name=".BookingDetail"
+            android:name=".booking.BookingDetail"
             android:exported="false" />
         <activity
-            android:name=".MembershipList"
+            android:name=".membership.MembershipList"
             android:exported="false" />
         <activity
-            android:name=".BookingList"
+            android:name=".booking.BookingList"
             android:exported="false" />
         <activity
             android:name=".PrivacyPolicy"
@@ -28,7 +28,7 @@
             android:name=".Feedback"
             android:exported="false" />
         <activity
-            android:name=".Membership"
+            android:name=".membership.Membership"
             android:exported="false" />
         <activity
             android:name=".UpdateProfile"
@@ -37,13 +37,13 @@
             android:name=".Profile"
             android:exported="false" />
         <activity
-            android:name=".Appointment"
+            android:name=".trainer.Appointment"
             android:exported="false" />
         <activity
-            android:name=".Diet"
+            android:name=".diet.Diet"
             android:exported="false" />
         <activity
-            android:name=".DietList"
+            android:name=".diet.DietList"
             android:exported="false" />
         <activity
             android:name=".MyWorkoutPlansList"
@@ -55,19 +55,19 @@
             android:name=".WorkoutPlan"
             android:exported="false" />
         <activity
-            android:name=".WriteReview"
+            android:name=".trainer.WriteReview"
             android:exported="false" />
         <activity
-            android:name=".Review"
+            android:name=".trainer.Review"
             android:exported="false" />
         <activity
-            android:name=".ApprovedTrainerProfile"
+            android:name=".trainer.ApprovedTrainerProfile"
             android:exported="false" />
         <activity
             android:name=".Registration"
             android:exported="false" />
         <activity
-            android:name=".TrainerApprovedList"
+            android:name=".trainer.TrainerApprovedList"
             android:exported="false" />
         <activity
             android:name=".Packages"
@@ -100,10 +100,10 @@
             android:name=".ProfileUserName"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
+            android:name=".home.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
