--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Add the following uses-permission if not already present -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -123,6 +126,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Add android:exported="true" for CheckoutActivity -->
+        <activity
+            android:name="com.razorpay.CheckoutActivity"
+            android:exported="true">
+            <!-- Other attributes -->
+        </activity>
+
+        <!-- Add android:exported="true" for RzpTokenReceiver -->
+        <receiver
+            android:name="com.razorpay.RzpTokenReceiver"
+            android:exported="true">
+            <!-- Other attributes -->
+        </receiver>
     </application>
 
 </manifest>
