--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,22 @@
             android:name=".WorkoutPlanVatical"
             android:exported="false">
         </activity>
+        <activity
+            android:name=".CreateWorkoutPlan"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".WorkoutPlans"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".EditWorkout"
+            android:exported="false">
+        </activity>
+<activity
+            android:name=".WorkoutExercisesList"
+            android:exported="false">
+        </activity>
 
         <activity
             android:name=".SplashScreen"
